<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogue_bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/pop_up_dlg_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
        <!-- <WebView -->
        <!-- android:id="@+id/pop_up_dlg_text" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" /> -->
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/pop_up_negative_btn"
            style="@style/PopUpDlgButtonStyle"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:text="@string/negative_btn" />

        <Button
            android:id="@+id/pop_up_neutral_btn"
            style="@style/PopUpDlgButtonStyle"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/neutral_btn" />

        <Button
            android:id="@+id/pop_up_positive_btn"
            style="@style/PopUpDlgButtonStyle"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="8dp"
            android:text="@string/positive_btn" />
    </LinearLayout>

</LinearLayout>