<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/usernameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageview"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="5dp"
        android:imeOptions="actionNext"
        android:imeActionLabel="@+id/passwordEdt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameEdt"
        android:layout_alignLeft="@+id/usernameEdt"
        android:layout_alignRight="@+id/usernameEdt"
        android:layout_alignStart="@+id/usernameEdt"
        android:layout_below="@+id/usernameEdt"
        android:layout_centerHorizontal="true"
        android:gravity="start|center_vertical"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:imeOptions="actionNext"
        android:imeActionLabel="@+id/roleSpinner"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/roleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameEdt"
        android:layout_alignLeft="@+id/usernameEdt"
        android:layout_alignRight="@+id/usernameEdt"
        android:layout_alignStart="@+id/usernameEdt"
        android:layout_below="@+id/passwordEdt"
        android:layout_marginTop="20dp"
        android:entries="@array/roles"
        android:prompt="@string/tag_prompt"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/patientUserNameEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameEdt"
        android:layout_alignLeft="@+id/usernameEdt"
        android:layout_alignRight="@+id/usernameEdt"
        android:layout_alignStart="@+id/usernameEdt"
        android:layout_below="@+id/roleSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="start|center_vertical"
        android:hint="@string/hint_patient_uname"
        android:inputType="text"
        android:padding="5dp"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/usernameEdt"
        android:layout_alignLeft="@+id/usernameEdt"
        android:layout_alignRight="@+id/usernameEdt"
        android:layout_alignStart="@+id/usernameEdt"
        android:layout_below="@+id/patientUserNameEdt"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_selector"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/tag_submit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>